--- a/readme
+++ b/readme
@@ -7,6 +7,7 @@ npm install --save redux react-redux
 npm install --save-dev nodemon
 npm install --save redux-thunk
 npm install --save classnames // className에 여러개의 클래스를 적용할때
+npm install react-sticky // 우측 고정 메뉴
 
 
 npm install sass-loader node-sass --save-dev
