--- a/readme
+++ b/readme
@@ -8,6 +8,8 @@ npm install --save-dev nodemon
 npm install --save redux-thunk
 npm install --save classnames // className에 여러개의 클래스를 적용할때
 npm install react-sticky // 우측 고정 메뉴
+npm install --save react-router
+
 
 
 npm install sass-loader node-sass --save-dev
